[package]
authors.workspace    = true
categories.workspace = true
description          = "Utilities to create HTML AST for biome_html_parser"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "biome_html_factory"
repository.workspace = true
version              = "0.3.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
biome_html_syntax = { workspace = true }
biome_rowan       = { workspace = true }

[lints]
workspace = true
