[package]
authors.workspace    = true
categories.workspace = true
description          = "Biome's HTML formatter"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "biome_html_formatter"
repository.workspace = true
version              = "0.3.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
biome_diagnostics = { workspace = true }
biome_formatter   = { workspace = true }
biome_html_syntax = { workspace = true }
biome_rowan       = { workspace = true }
biome_suppression = { workspace = true }

[dev-dependencies]
biome_formatter_test = { path = "../biome_formatter_test" }
biome_fs             = { path = "../biome_fs" }
biome_html_factory   = { path = "../biome_html_factory" }
biome_html_parser    = { path = "../biome_html_parser" }
biome_parser         = { path = "../biome_parser" }
countme              = { workspace = true, features = ["enable"] }
insta                = { workspace = true, features = ["glob"] }
serde                = { version = "1", features = ["derive"] }
serde_json           = { workspace = true }
tests_macros         = { path = "../tests_macros" }

# cargo-workspaces metadata
[package.metadata.workspaces]
independent = true

[lints]
workspace = true
